Added email verification (almost)
