# backend/src/controllers/auth.controller.ts
@@ -1,5 +1,6 @@
-import { Body, Controller, Get, Post, Res, Route, Security, Tags, TsoaResponse } from "tsoa"
+import { Body, Controller, Get, Path, Post, Res, Route, Security, Tags, TsoaResponse } from "tsoa"
 import bcrypt from 'bcrypt'
+import jwt from 'jsonwebtoken'
 import dotenv from 'dotenv'
 
 import { IUserLoginPayload, IUserRegisterPayload } from "../interfaces/user.interface";
@@ -7,6 +8,7 @@ import User from "../database/models/user.model";
 import TokenService from "../services/token.service";
 import EmailService from "../services/email.service";
 import { HttpError } from "../errors/errors";
+import { IJwtPayload } from "../interfaces/auth.interface";
 
 dotenv.config()
 
@@ -16,7 +18,7 @@ export class AuthenticationController extends Controller {
     @Post('register')
     public async register(
         @Body() requestBody : IUserRegisterPayload
-    ) : Promise<void> {
+    ): Promise<void> {
         const {firstName, lastName, email, password} = requestBody
 
         const existingUser = await User.findOne({where: {email}})
@@ -47,7 +49,7 @@ export class AuthenticationController extends Controller {
     public async login(
         @Body() requestBody: IUserLoginPayload,
         @Res() res: TsoaResponse<200, void>
-    ) : Promise<void> {
+    ): Promise<void> {
         const {email, password, rememberMe} = requestBody
 
         const existingUser = await User.findOne({where: {email}})
@@ -79,12 +81,39 @@ export class AuthenticationController extends Controller {
 
     @Post('logout')
     @Security('jwt')
-    public async logout() : Promise<void> {
+    public async logout(): Promise<void> {
         this.setHeader('Set-Cookie', [`jwt=deleted; Max-Age=0`])
+    }
+
+    @Post('email-verify/{token}')
+    public async emailVerify(
+        @Path() token : string
+    ): Promise<void> {
+        if(!token) {
+            throw new HttpError(404, 'Token not found')
+        }
+
+        const AUTHENTICATION_SECRET_KEY = String(process.env.AUTHENTICATION_SECRET_KEY)
+        const decoded = jwt.verify(token, AUTHENTICATION_SECRET_KEY) as IJwtPayload
+
+        const user = await User.findByPk(decoded.id)
+
+        if(!user) {
+            throw new HttpError(404, 'User not found')
+        }
+
+        if(user.verified) {
+            throw new HttpError(304, 'User is already verified')
+        }
+
+        user.verified = true
+        await user.save()
+
+        this.setStatus(200)
     }
 
     @Get('profile')
     @Security('jwt')
-    public async profile() : Promise<void> {
+    public async profile(): Promise<void> {
     }
 }
